--- a/robot_arm_sdk_manual.html
+++ b/robot_arm_sdk_manual.html
@@ -619,7 +619,7 @@ if __name__ == "__main__":
 
     <div class="footer">
         <p>ロボットアームSDK v1.0 - 開発者向け説明書</p>
-        <p>Copyright © 2024 Robot Control Systems</p>
+        <p>Copyright © 2024 Taguro</p>
     </div>
 </body>
 </html>
